Complete the dynamometer calculating code and delete the unnecessary functions in modbus_rtu.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,9 @@ set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake_module)
 find_package(Modbus REQUIRED)
 
 include_directories(
+        include
         ${MODBUS_INCLUDE_DIR}
-        ./include
 )
 
-add_library(modbus_rtu src/modbus_rtu.cpp)
-target_link_libraries(modbus_rtu ${MODBUS_LIBRARIES})
-add_executable(test_force_sensor src/test_force_sensor.cpp)
-target_link_libraries(test_force_sensor ${MODBUS_LIBRARIES})
+add_executable(force_sensor src/Dynamometer.cpp src/modbus_rtu.cpp)
+target_link_libraries(force_sensor ${MODBUS_LIBRARIES})
